@@ -465,7 +465,7 @@ CONFIG_SST25_SPIMODE=0
 CONFIG_SST25_SPIFREQUENCY=80000000
 # CONFIG_SST25_READONLY is not set
 CONFIG_SST25_SECTOR512=y
-CONFIG_SST25_SLOWWRITE=y
+# CONFIG_SST25_SLOWWRITE is not set
 # CONFIG_SST25_SLOWREAD is not set
 # CONFIG_MTD_SST39FV is not set
 # CONFIG_MTD_W25 is not set
